<resources>
    <string name="app_name">Tarang-App</string>
    <string name="tarang">Tarang</string>
    <string name="welcome_to">Welcome to</string>
    <string name="hello">Hello,</string>
    <string name="name">Chhay</string>
    <string name="fullname">Chengchhay Sun</string>
    <string name="phone_number_012">012 234 456</string>
    <string name="current_reservation">Current Reservation</string>
    <string name="venue">Venue: F2</string>
    <string name="type">Type: Football</string>
    <string name="date">Sunday, 12 June</string>
    <string name="start_time">5:00</string>
    <string name="end_time">7:00</string>
    <string name="slash">&#8211;</string>
    <string name="warning">Please arrive 30 min early</string>

    <string name="booking">Booking</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>

    <string name="calender_icon">Calender Icon</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="card">Card</string>
    <string name="user_profile">User Profile</string>

    <string name="inbox">Inbox</string>
    <string name="unseen">Unseen (1)</string>
    <string name="seen">Seen (1)</string>
    <string name="reminder">Reminder</string>
    <string name="welcome">Welcome</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore .</string>

    <string name="profile">Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="already_have">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_acc">Create new account?</string>
    <string name="venue_image">Venue Image</string>
    <string name="reserve_the_venue">Reserve the Venue</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="football">Football</string>

</resources>