<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cardId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="8dp"
        android:background="@drawable/card_shape"
        android:padding="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/venueImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/venue_image"
                android:background="@drawable/card_shape_gray"
                android:clipToOutline="true"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="14dp">

                <TextView
                    android:id="@+id/venueName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venue"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sportType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <ImageView
                    android:id="@+id/calender_icon"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/calender_icon"
                    android:src="@drawable/calendar_icon" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <ImageView
                    android:id="@+id/clock_icon"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/clock_icon"
                    android:src="@drawable/clock_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:text="@string/start_time"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/slash"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end_time"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>
                </LinearLayout>
<!--                <TextView-->
<!--                    android:id="@+id/time_text"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:paddingHorizontal="8dp"-->
<!--                    android:text="@string/time"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="14sp" />-->
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/warning"
            android:textColor="@color/design_default_color_error" />

    </LinearLayout>
</LinearLayout>
